--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <center>
   	<h3 class="btn btn-warning heading">AI DJ WEB APP
 	    <br>
-	    <span class="note">NOTE - Get your left hand in front of the webcam to play Peter Pan song. et your right 
-         hand in front of the webcam to play Harry Potter Theme song.</span>
+	    <span class="note">NOTE - Get your left hand in front of the webcam to play As it Was song. Get your right 
+         hand in front of the webcam to play Night Changes song.</span>
   	</h3>
 	<br><br>
     <h3 class="btn btn-warning">Song name</h3>
